# scale_truck_control_carla

./: README.md  test.cpp
CACC/include/: CACC_sumo_node.hpp
CACC/src/: CACC_sumo_node.cpp
lane_detection_ros2/src/: lane_detect.cpp
scale_truck_control_ros2/config/: FV1.yaml  config.yaml
scale_truck_control_ros2/include/lrc/: lrc.hpp
scale_truck_control_ros2/include/scale_truck_control/: ScaleTruckController.hpp
scale_truck_control_ros2/src/: scale_truck_control.cpp
speed_control/include/speed_control/: speed_control_node.hpp
speed_control/src/: speed_control_node.cpp
truck_cam/config/: LV.yaml
truck_cam/depth_estimation/: CMakeLists.txt
truck_cam/lane_detection/: CMakeLists.txt
truck_cam/lane_detection/include/: lane_detection.hpp
truck_cam/lane_detection/src/: lane_detection.cpp  main.cpp
truck_cam/lane_detection_ros2/: CMakeLists.txt  package.xml
truck_cam/lane_detection_ros2/include/: lane_detect.hpp  spline.h
truck_cam/lane_detection_ros2/src/: lane_detect.cpp  main.cpp
truck_cam/lane_keeping/: CMakeLists.txt
truck_cam/lane_keeping/include/: lane_keeping.hpp
truck_cam/lane_keeping/src/: lane_keeping.cpp  main.cpp
truck_cam/ros2_msg/: CMakeLists.txt
truck_cam/ros2_msg/msg/: CarlaRadar2Radar.msg  Laned2LaneK.msg
truck_cam/sensor_cam/: CMakeLists.txt  package.xml
truck_cam/sensor_cam/include/: sensor_cam.hpp
truck_cam/sensor_cam/src/: main.cpp  sensor_cam.cpp
truck_cam/sensor_radar/: CMakeLists.txt  package.xml
truck_cam/sensor_radar/include/: sensor_radar.hpp
truck_cam/sensor_radar/src/: main.cpp  sensor_radar.cpp
